--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cheerio": "^1.1.2",
     "del": "^8.0.0",
     "gulp": "^5.0.0",
+    "gulp-cli": "^3.1.0",
     "gulp-pug": "^5.0.0",
     "gulp-rename": "^2.0.0",
     "html-minifier-terser": "^7.2.0",
